# FFC-AI

./: .gitattributes  .gitignore  AI_ITERATION_FACTORY_GUIDE.md  AI_REMOTE_RUNNER_GUIDE.md  CLAUDE_CODE_FIX_2024.md  CLAUDE_CODE_OPTIMIZATION.md  CLAUDE_CODE_OPTIMIZATION_SUMMARY.md  CLAUDE_CODE_STABILITY_FIX.md  CLAUDE_CODE_THIRD_PARTY_API_FIX.md  CODEX_TROUBLESHOOTING.md  COMMUNICATION_PLATFORM_GUIDE.md  CRITICAL_FIX_REPORT.md  OPTIMIZATION_LOG_CODEX_FIX.md  OPTIMIZATION_LOG_ROUND2.md  README-STABILITY-UPDATE.md  README.md  RESTART_AFTER_TASK.md  STABILITY_OPTIMIZATION_COMPLETE.md  STABILITY_OPTIMIZATION_PLAN.md  pyproject.toml
outputs/: AI_ITERATION_FACTORY_GUIDE.md  AI_REMOTE_RUNNER_GUIDE.md  COMMUNICATION_PLATFORM_GUIDE.md  DEBIAN12_FULL_ACCESS_TELEGRAM_OPTIMIZATION_GUIDE.md  MASTER_WRITER_AI_GUIDE.md  REVIEWER_AI_GUIDE.md
scripts/: README-STABILITY-FIX.md  bootstrap-debian12.sh  bootstrap-mattermost.sh  diagnose-claude-code-detailed.sh  diagnose-claude-code.sh  diagnose-claude-stability.sh  diagnose-codex.sh  fix-claude-api-timeout.sh  fix-claude-code-100s-timeout.sh  fix-claude-code-third-party-api.sh  fix-claude-code-timeout.sh  fix-codex-reconnecting.sh  fix-stability-restart.sh  health-check.sh  install-communication-vps.sh  install-runner.sh  install-telegram-api-proxy.sh  mattermost-first-admin.sh  optimize-stability.sh  pair-runner.sh  pair-telegram.sh  quick-fix-claude-stability.sh  rollback-communication.sh  rollback-install.sh  run-independent-review.sh  setup-runner-tunnel.sh  smoke-test.sh  validate-config.sh  validate-core-ready.sh  (+2 more)
tests/: conftest.py  (+18 more)
(+24 files in other folders)
