[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-remote-runner"
version = "0.1.0"
description = "Self-hosted mobile-controlled AI runner"
requires-python = ">=3.10"

[project.scripts]
ai-remote-runner = "ai_remote_runner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
